[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/OptionsPopup.gd" type="Script" id=1]
[ext_resource path="res://Ressources/Character/Slider.png" type="Texture" id=2]
[ext_resource path="res://Ressources/Fonts/OptionsFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Ressources/Sounds/OPTIONSambiance.ogg" type="AudioStream" id=4]
[ext_resource path="res://Ressources/Sounds/Jump 1.wav" type="AudioStream" id=5]
[ext_resource path="res://Ressources/Fonts/PixelFontTresPetit.tres" type="DynamicFont" id=6]
[ext_resource path="res://Ressources/Fonts/PixelFont.tres" type="DynamicFont" id=7]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 26, 128 )
modulate_color = Color( 0.423529, 0.423529, 0.423529, 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.294118, 0.294118, 0.294118, 1 )
border_width_left = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxEmpty" id=5]

[node name="Options" type="Node2D"]
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Node2D"]
modulate = Color( 1, 1, 1, 0.607843 )
margin_left = -198.757
margin_top = -204.293
margin_right = 179.243
margin_bottom = 253.707
color = Color( 0.337255, 0.337255, 0.337255, 1 )

[node name="Music" type="VSlider" parent="Node2D"]
margin_left = 123.931
margin_top = -130.823
margin_right = 149.931
margin_bottom = -2.82263
rect_rotation = 90.0
rect_scale = Vector2( 2.15922, 2.36085 )
size_flags_vertical = 0
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_disabled = SubResource( 2 )
custom_styles/grabber_highlight = SubResource( 3 )
custom_styles/grabber_area = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
ticks_on_borders = true

[node name="Effects" type="VSlider" parent="Node2D"]
margin_left = 122.992
margin_top = 11.3824
margin_right = 148.992
margin_bottom = 139.382
rect_rotation = 90.0
rect_scale = Vector2( 2.15922, 2.36085 )
size_flags_vertical = 0
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_disabled = SubResource( 2 )
custom_styles/grabber_highlight = SubResource( 3 )
custom_styles/grabber_area = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
ticks_on_borders = true

[node name="CheckBox" type="CheckBox" parent="Node2D"]
use_parent_material = true
margin_left = -195.708
margin_top = 46.1974
margin_right = -62.7078
margin_bottom = 96.1974
rect_min_size = Vector2( 50, 50 )
rect_scale = Vector2( 3, 3 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="MusicSound" type="AudioStreamPlayer" parent="Node2D"]
stream = ExtResource( 4 )
mix_target = 2
bus = "Music"

[node name="EffectsSound" type="AudioStreamPlayer" parent="Node2D"]
stream = ExtResource( 5 )
mix_target = 2
bus = "Effects"

[node name="Label2" type="Label" parent="Node2D"]
margin_left = -177.821
margin_top = -38.4846
margin_right = -15.8208
margin_bottom = 0.515381
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "EFFETS"

[node name="Label" type="Label" parent="Node2D"]
margin_left = -175.955
margin_top = -180.5
margin_right = 3.04517
margin_bottom = -141.5
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "MUSIQUE"

[node name="Label3" type="Label" parent="Node2D"]
margin_left = -119.751
margin_top = 107.991
margin_right = 161.249
margin_bottom = 146.991
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PLEIN ECRAN"

[node name="Button" type="Button" parent="Node2D"]
margin_left = -134.468
margin_top = 168.99
margin_right = 129.532
margin_bottom = 225.99
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Retour"
flat = true

[connection signal="mouse_entered" from="Node2D/Music" to="." method="_on_Music_mouse_entered"]
[connection signal="mouse_exited" from="Node2D/Music" to="." method="_on_Music_mouse_exited"]
[connection signal="value_changed" from="Node2D/Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="Node2D/Effects" to="." method="_on_Effects_value_changed"]
[connection signal="toggled" from="Node2D/CheckBox" to="." method="EnableFullscreen"]
[connection signal="pressed" from="Node2D/Button" to="." method="_on_Button_pressed"]
